--- a/.classpath
+++ b/.classpath
@@ -27,5 +27,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/home/local/ZOHOCORP/chandra-pt2489/Desktop/mysql-connector-java-5.1.47/mysql-connector-java-5.1.47.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
